--- a/app/globals.css
+++ b/app/globals.css
@@ -84,3 +84,23 @@ body {
   filter: grayscale(0%);
   transform: scale(1.05);
 }
+
+/* Infinite Marquee */
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: scroll 80s linear infinite;
+  width: max-content;
+}
+
+.animate-marquee:hover {
+  animation-play-state: paused;
+}
